--- a/images.html
+++ b/images.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
+<meta charset="UTF-8">
+
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css"> 
-        </script>
     </head>
     <body>
                 
@@ -28,6 +30,7 @@
                     
                 </div> 
                 <input type="hidden" name="tbm" value=isch>
+
             </form>
         </div>
     </body>
